# search_algorithms

./: .gitignore  README.md
source/: CMakeLists.txt
source/src/: bs_iterative.txt  bs_recursive.txt  linear.txt  searching.cpp  searching.h  timing_template.cpp
source/tests/: CMakeLists.txt  main.cpp
source/tests/include/tm/: test_manager.cpp  test_manager.h
